test/spec_vectors/local_set/fail/module_31.wat
(module (func $large-param (param i32 i64) (local.set 714324343 (i32.const 0))))